@@ -1,9 +1,13 @@
+2020-09-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* configure.ac: SeeTeX Ver.20200908
+
 2020-09-08  Karl Berry  <karl@freefriends.org>
 
 	* dvitodvi.man,
 	* dvibook.man: insert date, mention maintained as part of TL.
 
-2020-05-01  Manuel Stoeckl  <texlive@mstoeckl.com>
+2020-09-08  Manuel Stoeckl  <texlive@mstoeckl.com>
 
 	* dvitodvi.c,
 	* dvibook.c (MAXDVIPAGES): remove; dynamically allocate.
